--- a/documentation/antora.yml
+++ b/documentation/antora.yml
@@ -1,7 +1,7 @@
 name: reference
 title: Debezium Documentation
-version: '1.8'
-display_version: 'devel'
+version: 'devel'
+display_version: '1.8'
 prerelease: true
 nav:
   - modules/ROOT/nav.adoc
